--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -38,7 +38,7 @@ components:
       properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
         visible: true, text: Tickets Created Last Week, font_size: null, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+        background: '', bold: true, underline: false, icon: ''}
       name: label_1
       layout_properties: {grid_position: 'EVBYSG,WKMMOA'}
     - type: Plot
@@ -57,7 +57,7 @@ components:
       properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
         visible: true, text: Tickets Created Last Week, font_size: null, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+        background: '', bold: true, underline: false, icon: ''}
       name: label_6
       layout_properties: {grid_position: 'WYWYVL,SAVTWL'}
     - type: Plot
@@ -69,18 +69,37 @@ components:
     properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
       spacing_below: small, background: ''}
+    name: outlined_card_7
+    layout_properties: {grid_position: 'DZJRXD,LEHFMS'}
+    components:
+    - type: Label
+      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+        visible: true, text: Tickets by Current Status, font_size: null, font: '',
+        spacing_above: none, icon_align: left, spacing_below: none, italic: false,
+        background: '', bold: true, underline: false, icon: ''}
+      name: label_5
+      layout_properties: {grid_position: 'OLTLJV,VAOVPD'}
+    - type: Plot
+      properties: {spacing_above: small, spacing_below: small, height: '200', visible: true,
+        tooltip: '', interactive: true}
+      name: plot_5
+      layout_properties: {grid_position: 'FCPCNZ,PAZWRW'}
+  - type: ColumnPanel
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
     name: outlined_card_3
-    layout_properties: {grid_position: 'GKHMKJ,HTZRYS'}
+    layout_properties: {grid_position: 'DZJRXD,IZAKUV'}
     components:
     - type: Label
       properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
         visible: true, text: Responses by User, font_size: null, font: '', spacing_above: none,
-        icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
         underline: false, icon: ''}
       name: label_2
       layout_properties: {grid_position: 'FRTTWS,VWIJMX'}
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '200', visible: true,
         tooltip: '', interactive: true}
       name: plot_1
       layout_properties: {grid_position: 'TVXWGP,UOLCYQ'}
@@ -96,11 +115,11 @@ components:
       properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
         visible: true, text: Tickets by Escalation Type, font_size: null, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+        background: '', bold: true, underline: false, icon: ''}
       name: label_3
       layout_properties: {grid_position: 'DIXPZN,WHOLWG'}
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '500', visible: true,
         tooltip: '', interactive: true}
       name: plot_2
       layout_properties: {grid_position: 'SERRWL,SCAPHT'}
@@ -115,11 +134,11 @@ components:
       properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
         visible: true, text: Tickets by Creation Date, font_size: null, font: '',
         spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
+        background: '', bold: true, underline: false, icon: ''}
       name: label_4
       layout_properties: {grid_position: 'WSRDFL,QPMUXE'}
     - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
+      properties: {spacing_above: small, spacing_below: small, height: '500', visible: true,
         tooltip: '', interactive: true}
       name: plot_3
       layout_properties: {grid_position: 'XSTRYG,UZSSGN'}
@@ -136,25 +155,6 @@ components:
         tooltip: '', interactive: true}
       name: plot_4
       layout_properties: {grid_position: 'HNSWSI,JRXDXA'}
-  - type: ColumnPanel
-    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
-      spacing_below: small, background: ''}
-    name: outlined_card_7
-    layout_properties: {grid_position: 'ZEKOPO,SHISOL'}
-    components:
-    - type: Label
-      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
-        visible: true, text: Tickets by Current Status, font_size: null, font: '',
-        spacing_above: none, icon_align: left, spacing_below: none, italic: false,
-        background: '', bold: false, underline: false, icon: ''}
-      name: label_5
-      layout_properties: {grid_position: 'OLTLJV,VAOVPD'}
-    - type: Plot
-      properties: {spacing_above: small, spacing_below: small, height: '400', visible: true,
-        tooltip: '', interactive: true}
-      name: plot_5
-      layout_properties: {grid_position: 'FCPCNZ,PAZWRW'}
 - type: FlowPanel
   properties: {role: null, spacing: none, align: center, tooltip: '', border: '',
     foreground: '', visible: true, spacing_above: none, spacing_below: none, background: ''}
