--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -29,7 +29,84 @@ components:
     layout_properties: {grid_position: 'AFDJCH,TYTKYH'}
   - type: ColumnPanel
     properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
-      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"YUSZEX":25,"YYDDFA":25}',
+      wrap_on: never, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: outlined_card_9
+    layout_properties: {grid_position: 'EOKNQD,TMUWHU'}
+    components:
+    - type: GridPanel
+      properties: {spacing_above: none, spacing_below: none, background: '', foreground: '',
+        border: '', visible: true, role: null, tooltip: ''}
+      name: grid_panel_1
+      layout_properties: {grid_position: 'KPVYIG,QZBCMC'}
+      components:
+      - type: Label
+        properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: Highlights, font_size: null, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+          underline: false, icon: ''}
+        name: label_14
+        layout_properties: {row: FLHQLM, width_xs: 12, col_xs: 0, grid_position: 'GWTAOX,SPUNQP',
+          width: 784.469}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: New, font_size: null, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
+        name: label_6
+        layout_properties: {row: UYMWCY, width_xs: 3, col_xs: 0, width: 173.609}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: Resolved, font_size: null, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
+        name: label_7
+        layout_properties: {row: UYMWCY, width_xs: 3, col_xs: 3, width: 105.734}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: '% Resolved', font_size: null, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
+        name: label_8
+        layout_properties: {row: UYMWCY, width_xs: 3, col_xs: 6, width: 105.734}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: SLA met, font_size: null, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
+          underline: false, icon: ''}
+        name: label_12
+        layout_properties: {row: UYMWCY, width_xs: 3, col_xs: 9, width: 173.609}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: '80', font_size: 40, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+          underline: false, icon: ''}
+        name: label_9
+        layout_properties: {row: ACGVAD, width_xs: 3, col_xs: 0, width: 169.359}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: '100', font_size: 40, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+          underline: false, icon: ''}
+        name: label_10
+        layout_properties: {row: ACGVAD, width_xs: 3, col_xs: 3, width: 169.359}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: 89%, font_size: 40, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+          underline: false, icon: ''}
+        name: label_11
+        layout_properties: {row: ACGVAD, width_xs: 3, col_xs: 6, width: 169.359}
+      - type: Label
+        properties: {role: body, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: 75%, font_size: 40, font: '', spacing_above: none,
+          icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+          underline: false, icon: ''}
+        name: label_13
+        layout_properties: {row: ACGVAD, width_xs: 3, col_xs: 9, width: 173.609}
+  - type: ColumnPanel
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{"YUSZEX":25}',
       spacing_below: small, background: ''}
     name: outlined_card_8
     layout_properties: {grid_position: 'EOBNLM,WXAABP'}
@@ -41,42 +118,30 @@ components:
         underline: false, icon: ''}
       name: label_1
       layout_properties: {grid_position: 'BNUWCT,IFYYFP'}
-    - type: GridPanel
-      properties: {}
-      name: grid_panel_1
-      layout_properties: {grid_position: 'WGIQAX,EPZUUK'}
-      components:
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: New, font_size: null, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: label_6
-        layout_properties: {row: UYMWCY, width_xs: 1, col_xs: 0, width: 37.8594}
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: Resolved, font_size: null, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: label_7
-        layout_properties: {row: UYMWCY, width_xs: 1, col_xs: 3, width: 37.8594}
-      - type: Label
-        properties: {role: null, align: left, tooltip: '', border: '', foreground: '',
-          visible: true, text: '% Resolved', font_size: null, font: '', spacing_above: small,
-          icon_align: left, spacing_below: small, italic: false, background: '', bold: false,
-          underline: false, icon: ''}
-        name: label_8
-        layout_properties: {row: UYMWCY, width_xs: 2, col_xs: 6, width: 173.609}
     - type: Plot
       properties: {spacing_above: small, spacing_below: small, height: '200', visible: true,
         tooltip: '', interactive: true}
       name: plot_6
       layout_properties: {grid_position: 'WWHFKC,YUSZEX'}
+  - type: ColumnPanel
+    properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
+      wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
+      spacing_below: small, background: ''}
+    name: outlined_card_10
+    layout_properties: {grid_position: 'EOBNLM,KGMMPI'}
+    components:
+    - type: Label
+      properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+        visible: true, text: Created Last Week, font_size: null, font: '', spacing_above: none,
+        icon_align: left, spacing_below: none, italic: false, background: '', bold: true,
+        underline: false, icon: ''}
+      name: label_15
+      layout_properties: {grid_position: 'ELZRWM,XZJEFI'}
     - type: Plot
       properties: {spacing_above: small, spacing_below: small, height: '200', visible: true,
         tooltip: '', interactive: true}
       name: plot_7
-      layout_properties: {grid_position: 'WWHFKC,YYDDFA'}
+      layout_properties: {grid_position: 'WECNFF,YYKLEW'}
   - type: ColumnPanel
     properties: {role: elevated-card, tooltip: '', border: '', foreground: '', visible: true,
       wrap_on: mobile, col_spacing: medium, spacing_above: small, col_widths: '{}',
