--- a/theme/parameters.yaml
+++ b/theme/parameters.yaml
@@ -36,7 +36,7 @@ roles:
 - name: outlined-error
   components: [TextBox, TextArea, DatePicker, DropDown]
 - name: input-error
-  components: [TextBox, TextArea, DatePicker, DropDown]
+  components: [TextBox, TextArea, DatePicker, DropDown, label]
 - name: switch
   components: [CheckBox]
 - name: switch-rounded
@@ -47,6 +47,8 @@ roles:
 - {name: narrow}
 - name: cms
   components: [TextBox]
+- {name: red-arrow}
+- {name: green-arrow}
 color_scheme:
   preset_groups:
   - name: Colour Scheme
