--- a/client_code/Reporting/form_template.yaml
+++ b/client_code/Reporting/form_template.yaml
@@ -112,8 +112,8 @@ components:
         name: label_13
         layout_properties: {row: ACGVAD, width_xs: 3, col_xs: 9, width: 160}
       - type: Label
-        properties: {role: red-arrow, align: center, tooltip: '', border: '', foreground: '',
-          visible: true, text: wert, font_size: null, font: '', spacing_above: none,
+        properties: {role: null, align: center, tooltip: '', border: '', foreground: '',
+          visible: true, text: '', font_size: null, font: '', spacing_above: none,
           icon_align: left, spacing_below: none, italic: false, background: '', bold: false,
           underline: false, icon: ''}
         name: label_16
